@@ -37,7 +37,7 @@ public:
   
   static int MAX_MEMO_LEN;
 
-	int findSelectedCategory(bool AllIsUnfiled=false);
+	// int findSelectedCategory(bool AllIsUnfiled=false);
 
 protected:
 	void initializeCategories(PilotDatabase *);
